--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,9 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>
+            This site was created by Vikram
+        </p>
         <img class="portrait" src="/img/me.jpg">
     </div>
     
